src/test/deca/context/invalid/cast_bool_int.deca
// Description :
// Cast explicite d'un booleen vers un entier

// Resultats :
// Erreur contextuelle


{
  int x;
  x = (int) true;
}
